# nxp_gazebo

./: CMakeLists.txt  package.xml
launch/: cupcar.launch  nxp_cuprace.launch
models/gps/: gps.sdf.jinja  model.config.jinja
models/iris/: iris.sdf
models/nxp_cupcar/: model.config  nxp_cupcar.sdf  nxp_cupcar.sdf.jinja
models/nxp_cupcar_hq/: model.config  nxp_cupcar_hq.sdf
models/nxp_drone/: model.config  nxp_drone.sdf  nxp_drone.sdf.jinja
models/nxp_drone/meshes/: 2212Top.stl  5010Top.stl
models/nxp_raceway/: nxp_raceway.sdf
models/nxp_raceway_2/: nxp_raceway.sdf
models/nxp_raceway_octagon/: model.config  nxp_raceway_octagon.sdf
models/nxp_raceway_overpass/: model.config  nxp_raceway_overpass.sdf
models/pixy2_cmucam5/: model.config.jinja  pixy2_cmucam5.sdf  pixy2_cmucam5.sdf.jinja
models/realsense_d455/: model.config  model.config.jinja  realsense_d455.sdf.jinja
models/realsense_d455/meshes/: d455-reduce.stl
models/start_point/: start_point.sdf
models/ydlidar_x4/: model.config  ydlidar_x4.sdf
models/ydlidar_x4/meshes/: X4-BASE.stl  X4-TOP.stl
msg/: PixyVector.msg
scripts/: cuprace_start.sh  cuprace_stop.sh  foxy_install.sh  jinja_model_gen.py  jinja_sensor_gen.py  jinja_world_gen.py  track_vision.py
worlds/: gen.world.jinja  nxp_raceway.world  nxp_raceway_octagon.world  nxp_raceway_overpass.world
